--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,27 +2,41 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": ".NET 9 Launch (Web)",
+      "name":"Projet",
       "type": "coreclr",
       "request": "launch",
       "preLaunchTask": "build",
-      "program": "${workspaceFolder}/bin/Debug/net9.0/WsProjet.dll",
+      "program": "${workspaceFolder}/bin/Debug/net6.0/WsProjet.dll",
       "args": [],
       "cwd": "${workspaceFolder}",
       "stopAtEntry": false,
       "serverReadyAction": {
         "action": "openExternally",
-        "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+        "uriFormat": "http://localhost:5010"
       },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "sourceFileMap": {
-        "/Views": "${workspaceFolder}/Views"
       }
     },
     {
-      "name": ".NET 9 Attach",
+      "name": "Projet",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "build",
+      "program": "${workspaceFolder}/bin/Debug/net6.0/WsProjet.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "uriFormat": "https://localhost:7248"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    {
+      "name": "C#: WsProjet (Attach)",
       "type": "coreclr",
       "request": "attach",
       "processId": "${command:pickProcess}"
